feat(02-03): add transactional mission credits
- Add CoinTransaction ledger entity, enums, and repository

- Add pessimistic wallet lock and duplicate mission credit guard

- Credit wallet and ledger atomically through WalletService